// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test articles reducer should get message about a problem with authentication 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about adding article to database 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about article's adding fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about article's modifying fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about article's removing fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about articles list's not finding 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about modifying article in database 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about removing article from database 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about single article's not finding 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "articles": Array [],
  "errorMessage": undefined,
  "properArticle": Object {},
}
`;

exports[`test articles reducer should load a single article 1`] = `
Object {
  "_id": "1111-2222-3333-4444",
  "allocationKey": "test-article",
  "articles": Array [],
  "author": "tester",
  "content": "Zawartość artykułu testowego",
  "date": "01-01-2020",
  "errorMessage": "",
  "properArticle": undefined,
  "title": "Artykuł testowy",
}
`;

exports[`test articles reducer should load articles list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "allocationKey": "test-article",
    "author": "tester",
    "content": "Zawartość artykułu testowego",
    "date": "01-01-2020",
    "title": "Artykuł testowy",
  },
  "articles": undefined,
  "errorMessage": "",
  "properArticle": Object {},
}
`;
